// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CounterpartyDocumentListItem renders with children 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 23px 28px;
}

<div
  className="c0"
  data-test-id="cp-profile-summary"
>
  <div>
    <label>
      some data
    </label>
    <div>
      some value
    </div>
  </div>
</div>
`;

exports[`CounterpartyDocumentListItem renders without children 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 23px 28px;
}

<div
  className="c0"
  data-test-id="cp-profile-summary"
/>
`;
